--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/metadata
+/bin/
+/metadata/
 /.metadata
+/.settings/
+/.settings
 
 # testing
 /coverage
